--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2 {
 
     .all,
     .violets {
-      visibility: hidden;
+      display: none;
     }
   }
 }
@@ -51,7 +51,7 @@ h2 {
 
     .rosa,
     .all {
-      visibility: hidden;
+      display: none;
     }
   }
 }
@@ -62,7 +62,7 @@ h2 {
 
     .violets,
     .rosa {
-      visibility: hidden;
+      display: none;
     }
   }
 }
